# Chess-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
src/: .attacks.h.swp  .move.cpp.swo  attacks.cpp  attacks.h  board.cpp  board.h  main.cpp  move.cpp  move.h  types.h  zobrist.h
tests/: CMakeLists.txt
